@@ -2497,12 +2497,20 @@
  STX_ideas: "Saint-Gallener Ideen" 
  STX_ideas_start: "Saint-Gallener Traditionen" 
  STX_ideas_bonus: "Saint-Gallener Ambitionen"
- hre_univ_glx_swiss_protectorate: "Protektorat der Schweizerischen Eidgenossenschaft"
- hre_univ_glx_swiss_protectorate_desc: "Seit der erfolgreichen Intervention der Schweizer gegen eine Invasion wissen wir und unsere Feinde, dass sie uns immer wieder helfen werden."
- hre_univ_glx_admitted_tagsatzung: "Aufnahme in die Tagsatzung"
- hre_univ_glx_admitted_tagsatzung_desc: "Die Tagsatzung war der Legislativ- und Exekutivrat der Schweizerischen Eidgenossenschaft."
- hre_univ_glx_library: "Stiftsbibliothek St. Gallen"
- hre_univ_glx_library_desc: "Die Stiftsbibliothek St. Gallen gilt als eine der reichsten mittelalterlichen Bibliotheken der Welt. Sie beherbergt eine der umfangreichsten Sammlungen frühmittelalterlicher Bücher im deutschsprachigen Raum."
+ STX_idea_1: "Stiftsbibliothek"
+ STX_idea_1_desc: "The Stiftsbibliothek (Abbey Library) of Saint Gallen was founded by St. Othmar, the progenitor of the abbey itself. It is an outstanding example of a large Carolingian monastic library and was since the 8th century one of the most important cultural centers in Europe."
+ STX_idea_2: "Fürstabtei"
+ STX_idea_2_desc: "Saint Gallen existed as an independent state and one of the chief Benedictine abbeys in Europe for centuries. From 1207 it had the status of Fürstabtei, or princely abbey."
+ STX_idea_3: "Reichsfürst"
+ STX_idea_3_desc: "In 1207, Abbot Ulrich von Sax was granted the rank of imperial prince by Philip of Swabia, King of the Germans. As an ecclesiastical principality, Saint Gallen was to constitute an important territorial state and a major regional power in northern Switzerland."
+ STX_idea_4: "Joachim Vadian"
+ STX_idea_4_desc: "Joachim von Watt, also known as Joachim Vadian, was born in 1484 into an influential merchant family. He worked as a teacher in Vienna, Padua, Trent and Venice. After studying medicine he came back to become the mayor of Saint Gallen and led the conversion of the city to Protestantism."
+ STX_idea_5: "Wegelin & Co."
+ STX_idea_5_desc: "Founded in Saint Gallen in 1741 by Caspar Zyli, it was the oldest bank in Switzerland. Specializing in private banking and asset management, it had branches in Zurich, Bern, Basel and Geneva to name a few."
+ STX_idea_6: "Stiftskirche St. Gallus und Othmar"
+ STX_idea_6_desc: "Completed in 1767, the cathedral was designed by Peter Thumb. Among its rich decorations are frescoes painted by Josef Wennamcher and the most complete set of historic church bells in Switzerland."
+ STX_idea_7: "Saint Gallen Embroidery"
+ STX_idea_7_desc: "The region around Saint Gallen was once the largest and most important export area for embroidery, spurred on by the invention of the hand embroidery machine in 1828. During the height of the Industrial Revolution, around half the worldwide production of these decorated textiles came from the city."
 #Slovenian
  slovenian_ideas: "Slowenische Ideen"
  slovenian_ideas_start: "Slowenische Traditionen"
