@@ -6,6 +6,7 @@
 -Fixed several issues with the Plague event chain and made it easier to understand
 -Added some more goto effects in events
 -Fixed the Lombard League disbanding prematurely
+-Reworked Saint Gallen's NI set (contribution by primi)
 
 # v 2.0.3 #
 
